# piper-dabai

./: .gitmodules  README.md
coffee_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
coffee_ws/install/coffee_detect/share/coffee_detect/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
coffee_ws/install/coffee_detect/share/coffee_detect/config/: params.yaml
coffee_ws/install/coffee_detect/share/coffee_detect/launch/: coffee.launch.py
coffee_ws/log/: latest_build
coffee_ws/src/coffee_detect/: .gitignore  CMakeLists.txt
coffee_ws/src/coffee_detect/coffee_detect/: coffee.py
coffee_ws/src/coffee_detect/coffeetest/img/: new_depth_raw.tiff  new_end_pose.json
coffee_ws/src/coffee_detect/coffeetest/tool/: cd.ipynb  hsv.py
moveit_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
moveit_ws/install/chomp_motion_planner/lib/: libchomp_motion_planner.so.2.14.1
moveit_ws/install/moveit_core/lib/: libcollision_detector_bullet_plugin.so.2.14.1  libcollision_detector_fcl_plugin.so.2.14.1  libmoveit_acceleration_filter.so.2.14.1  libmoveit_butterworth_filter.so.2.14.1  libmoveit_collision_detection.so.2.14.1  libmoveit_collision_detection_bullet.so.2.14.1  libmoveit_collision_detection_fcl.so.2.14.1  libmoveit_collision_distance_field.so.2.14.1  libmoveit_constraint_samplers.so.2.14.1  libmoveit_distance_field.so.2.14.1  libmoveit_dynamics_solver.so.2.14.1  libmoveit_exceptions.so.2.14.1  libmoveit_kinematic_constraints.so.2.14.1  libmoveit_kinematics_metrics.so.2.14.1  libmoveit_planning_interface.so.2.14.1  libmoveit_planning_scene.so.2.14.1  libmoveit_robot_model.so.2.14.1  libmoveit_robot_state.so.2.14.1  libmoveit_robot_trajectory.so.2.14.1  libmoveit_ruckig_filter.so.2.14.1  libmoveit_smoothing_base.so.2.14.1  libmoveit_test_utils.so.2.14.1  libmoveit_trajectory_processing.so.2.14.1  libmoveit_transforms.so.2.14.1  libmoveit_utils.so.2.14.1
moveit_ws/install/moveit_hybrid_planning/lib/: libforward_trajectory_plugin.so.2.14.1  libmotion_planning_pipeline_plugin.so.2.14.1  (+6 more)
moveit_ws/log/: latest_build
my_piper_ros/Log/: OrbbecSDK.log.txt
orbbec_ws/Log/: OrbbecSDK.log.txt
orbbec_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
orbbec_ws/log/: latest_build
trac_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
trac_ws/log/: latest_build
(+263 files in other folders)
