<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coffee_detect</name>
  <version>0.1.0</version>
  <description>
    A ROS 2 node for detecting bags in RGB-D images, estimating grasp pose using SAM and geometry,
    and transforming the pose to the robot base frame using hand-eye calibration.
  </description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- 构建工具 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 核心依赖 -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>

  <!-- Python 第三方库（运行时依赖） -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-scikit-learn</exec_depend>
  <exec_depend>open3d</exec_depend>
  <exec_depend>segment-anything</exec_depend> <!-- 注意：该包需手动安装 -->

  <!-- 如果你使用 CUDA，确保系统已安装，但无需在 package.xml 声明 -->

  <!-- 测试依赖（可选） -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- 导出信息 -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>